# NumbersAndCalculus

./: .gitignore  ARCHITECTURE_IO_LITERALS.md  BUILD_SCRIPTS_GUIDE.md  BUILD_SCRIPTS_README.md  CMakeLists.txt  CMakeLists_utf8.txt  COMPILATION_REPORT.md  COMPREHENSIVE_BENCHMARKING_SYSTEM.md  CONSTEXPR_TABLES_DEMO.md  CalculoNOEXCEPT.cpp  ERROR_HANDLING_SYSTEM.md  LICENSE  MSYS2_SETUP.md  Makefile_test  PERFORMANCE_ANALYSIS_EXTENDED.md  PROBLEMA_RESUELTO.md  PROJECT_CONSTRUCTION_GUIDE.md  PROYECTO_COMPLETADO.md  README.md  STD_OPTIONAL_MIGRATION_GUIDE.md  UTF8_SYSTEM_SUMMARY.md  basic_compile_test.sh  basic_test.cpp  benchmark_constexpr_tables.cpp  build.bat  build.sh  build_and_run.sh  build_equivalent.sh  build_improved.sh  build_msvc_simple.bat  build_multi_dirs.bat  build_multi_dirs.sh  build_multi_final.bat  build_separated_dirs.bat  build_simple.bat  build_simple.sh  build_simple_BACKUP.sh  build_simple_clean.bat  build_simple_fixed.sh  build_simple_fixed_final.sh  (+57 more)
benchmark_results/: comprehensive_benchmarks.csv  comprehensive_benchmarks.json  comprehensive_benchmarks.md  comprehensive_comparison_report.md
build_clang_release_cpp20/: .ninja_deps  .ninja_log  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  tests_include-b12d07c.cmake  tests_tests-b12d07c.cmake
build_gcc_debug_cpp17/: .ninja_deps  .ninja_log  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  tests_include-b12d07c.cmake  tests_tests-b12d07c.cmake
build_gcc_release_cpp20/: .ninja_deps  .ninja_log  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  tests_include-b12d07c.cmake  tests_tests-b12d07c.cmake
build_msvc_release_cpp23/: .ninja_deps  .ninja_log  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  tests-b12d07c_include.cmake
docs/: MULTIPRECISION_IO.md  trait_based_specializations_summary.md
include/: boost_multiprecision_io.hpp  combinatorics.hpp  combinatorics_impl.hpp  constexpr_literals.hpp  custom_literals.hpp  custom_literals_io.hpp  int128_io.hpp  multiprecision_io.hpp  multiprecision_io_compatible.hpp  number_calc.hpp  number_calc_backup.hpp  number_calc_v2.hpp  number_type_traits.hpp  numeric_limits.hpp  utf8_io.hpp
include/io/: io.hpp
include/io/integral_types/: int128_io.hpp
include/literals/: literals.hpp
include/literals/integral_literals/: int128_literals.hpp
include/number_calc/: comprehensive_benchmarks.hpp  error_handling.hpp  integral_power_functions.hpp
include/number_calc/integral_power_functions/: basic_power_functions.hpp  power_of_2_optimizations.hpp  small_type_power_optimizations.hpp  trait_based_specializations.hpp
include/number_calc/integral_power_functions/lookup_tables/: power_of_2_lookup_tables.hpp
include/type_traits/: extended_integral_traits.hpp
int128_test_build/: CMakeLists.txt
src/: combinatorics.cpp  main.cpp
tests/: demo_trait_based_specializations.cpp  test_basic_traits.cpp  test_combinatorics.cpp  test_fixed_precision_types.cpp  test_int128_support.cpp  test_int_power_specializations.cpp  test_number_calc_v2.cpp  test_numeric_limits.cpp  test_simple_unified.cpp  test_unified_multiprecision.cpp
